Fixing css bleed over ont manage blocks page

--- a/css/digital_agency.css
+++ b/css/digital_agency.css
@@ -12,6 +12,15 @@
   color:  white;
 }
 
+#layout-edit-main .region {
+  background-color: #fafafa;
+  color:  black;
+}
+
+#layout-edit-main .region a {
+  color: #0074bd;
+}
+
 .l-footer.region a {
   color: #C9B897;
 }
